--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   brasil_fields: ^1.14.0
   intl: ^0.18.1
   validatorless: ^1.2.3
+  fl_chart: ^0.64.0
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -65,9 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
