--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   fl_chart: ^0.64.0
   flutter_svg: ^2.0.9
   svg_flutter: ^0.0.1
+  objectbox_flutter_libs: ^2.3.1
+  objectbox_generator: ^2.3.1
+  objectbox: ^2.3.1
 
 dev_dependencies:
   flutter_test:
@@ -55,9 +58,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+objectbox:
+  output_dir: database
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -70,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
